--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DataBaseConnection": "Server=DESKTOP-T1VE7BB;Database=MentumGroupDB;Trusted_Connection=True;"
+  },
+  "AllowedHosts": "*"
 }
