--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBaseConnection": "Server=DESKTOP-T1VE7BB;Database=MentumGroupDB;Trusted_Connection=True;"
+    "DataBaseConnection": "Server=localhost\\SQLEXPRESS;Database=MentumGroupDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
